you have an app object first, (even on Windows where most anything was
possible beofre.)

Added wxMirrorDC.

Added wxIconLocation

wxPython's setup.py script now expects to use existing libraries for
the contribs (gizmos, stc, xrc, etc.) rather than building local
copies of them.

Added Python wrappers for the new wxVScrolledWindow, wxVListBox, and
wxHtmlListBox classes.




2.4.1.x
-------

Use wxSTC in the demo for displaying the soucre code of the samples.





2.4.1.2
-------

Added wxScrolledPanel from Will Sadkin

Added SetShape method to top level windows (e.g. wxFrame.)

Changed wxSWIG to not generate Python code using apply, (since it will
be deprecated in the future) wxSWIG will use spam(*args, **kw) syntax
instead.  Also changed the generated __repr__ methods to be a bit more
informative.

Made the version number information more robust and uh, informative.
Also added asserts to check that the major.minor versions of wxPython
and wxWindows match.

Added the new wx "renamer" package that will dynamically import from
the wxPython package and rename wxFooBar --> FooBar.  That means that
people can do imports without "import *" and can use names like
wx.Frame instead of wx.wxFrame.  This is phase 1 of a full transition
to the new namespace.

Updated Scintilla to 1.52.  I also changed it to use wxListCtrl
instead of wxListBox for the AutoComplete window, added the ability to
use custom bitmaps in the margin and in the AutoComplete windows, and
worked out how to do proper clipping of child windows on wxGTK.

Patrick O'Brien's PyCrust package has been renamed to Py and now
includes several new tools.  As part of the change the location of the
pacakge has changed as well, it is now accessible as "from wxPython
import py" (or "from wx import py" using the new namespace.)  There
are still some transition modules in the wxPython.lib.PyCrust package
that will issue a warning and then import what is needed from the new